ecmascript/parser/tests/test262-error-references/fail/8b72c44bd531621a.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/8b72c44bd531621a.js:1:10
  |
1 | for (var [p]=q of r);
  |          ^^^

